# tic_tac_toe

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: games.db  main.py
src/game/: model.py  router.py  schema.py  service.py
tests/: conftest.py  pytest.ini  test_game.py
